# voter_participation_extractor_portland

./: .gitignore  .pre-commit-config.yaml  README.md  data.json  parser.py  pyproject.toml  requirements.txt  voter_participation_parser.py
.github/: dependabot.yml
.github/workflows/: devskim.yml  lint-python.yml  python.yml  ruff.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_voter_participation_parser_py.html
src/: voter_participation_parser.py
tests/: test_voter_participation_parser.py
