[project]
name = "voter_participation_extractor_portland_maine"
version = "1.0.1"
readme = "README.md"
requires-python = ">=3.9"
license = { "file" = "LICENSE" }
authors = [{ "name" = "bmos", "email" = "wil.t.dsa@pm.me" }]
urls = { "GitHub" = "https://github.com/MaineDSA/voter_participation_extractor_portland" }
dependencies = [
    "pandas==2.2.3",
    "pypdfium2==4.30.1"
]

[project.optional-dependencies]
dev = [
    "bandit[toml]==1.8.3",
    "pre-commit==4.2.0",
    "ruff==0.11.4"
]

[tool.ruff]
line-length = 160
target-version = "py39"
include = [
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "F",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "T20",
    "TC",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "D100",
    "D103",
    "D104",
    "D203",
    "D212",
]

[tool.bandit]
exclude_dirs = [
    "tests/",
    ".venv/",
]
