[project]
name = "voter_participation_extractor_portland_maine"
version = "1.0.1"
readme = "README.md"
requires-python = ">=3.9"
license = { "file" = "LICENSE" }
authors = [{ "name" = "bmos", "email" = "wil.t.dsa@pm.me" }]
urls = { "GitHub" = "https://github.com/MaineDSA/voter_participation_extractor_portland" }
dependencies = [
    "pandas==2.3.0",
    "pypdfium2==4.30.1"
]

[project.optional-dependencies]
dev = [
    "bandit[toml,sarif]==1.8.3",
    "mypy==1.17.1",
    "pandas-stubs==2.2.3.250308",
    "pre-commit==4.2.0",
    "ruff==0.11.12"
]

[tool.ruff]
line-length = 160
target-version = "py39"
include = [
    "src/**/*.py",
    "tests/**/*.py",
]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "EM",
    "F",
    "G",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "T20",
    "TC",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "D100",
    "D103",
    "D104",
    "D203",
    "D212",
]

[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "pypdfium2",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [
    "./tests/",
    "./.venv/",
]
